--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title></title>
     <!-- css libs -->
-    <link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap-theme.css"/>
+    <link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/libs/bootstrap/css/bootstrap-theme.css"/>
 
     <!-- js libs -->
-    <script src="/libs/jquery/dist/jquery.min.js"></script>
+    <script src="/libs/jquery/jquery.min.js"></script>
     <script src="/libs/angular/angular.min.js"></script>
     <script src="/libs/angular-route/angular-route.min.js"></script>
 
