--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,29 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width"/>
     <!-- css libs -->
     <link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/libs/bootstrap/css/bootstrap-theme.css"/>
+    <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css"/>
+    <!--<link rel="stylesheet" href="libs/bootstrap/css/bootstrap-theme.css"/>-->
+    <link rel="stylesheet" href="/css/main.css"/>
 
     <!-- js libs -->
     <script src="/libs/jquery/jquery.min.js"></script>
     <script src="/libs/angular/angular.min.js"></script>
-    <script src="/libs/angular-route/angular-route.min.js"></script>
+    <script src="/libs/angular-ui-router.min.js"></script>
+    <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- build -->
     <script defer="defer" src="/js/app.js"></script>
-    <script defer="defer" src="/js/mainCtrl.js"></script>
+    <script defer="defer" src="/js/config.js"></script>
+    <script defer="defer" src="/js/directive.js"></script>
+    <script defer="defer" src="/js/controller/mainCtrl.js"></script>
+    <script defer="defer" src="/js/service/mainService.js"></script>
 </head>
 <body ng-app="App" ng-controller="mainCtrl">
-<div ng-view></div>
+<div loading></div>
+<div id="alerts" alerts></div>
+<div ui-view></div>
 </body>
 </html>
