--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width"/>
+    
     <!-- css libs -->
     <link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css"/>
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="/css/main.css"/>
 
     <!-- js libs -->
+    <script src="/libs/json.minify.js" type="text/javascript"></script>
     <script src="/libs/jquery/jquery.min.js"></script>
     <script src="/libs/angular/angular.min.js"></script>
     <script src="/libs/angular-ui-router.min.js"></script>
