--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
     <script src="/libs/angular/angular.min.js"></script>
     <script src="/libs/angular-ui-router.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/js/config.js"></script>
 
     <!-- build -->
     <script defer="defer" src="/js/app.js"></script>
-    <script defer="defer" src="/js/config.js"></script>
     <script defer="defer" src="/js/directive.js"></script>
     <script defer="defer" src="/js/controller/mainCtrl.js"></script>
     <script defer="defer" src="/js/service/mainService.js"></script>
